--- a/app/src/main/res/layout/activity_cocktails_list.xml
+++ b/app/src/main/res/layout/activity_cocktails_list.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".CocktailsListActivity">
 
-    <ListView
-        android:id="@+id/cocktailsListView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cocktailsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
