--- a/app/src/main/res/layout/activity_cocktails_list.xml
+++ b/app/src/main/res/layout/activity_cocktails_list.xml
@@ -7,16 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".CocktailsListActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cocktailsRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/cocktailsSwipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cocktailsRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/noResultText"
